syntax = "proto3";

package route;

service RouteService {
  rpc CreateRoute (CreateRouteRequest) returns (RouteResponse);
  rpc FindAllRoutes (FindAllRoutesRequest) returns (RoutesResponse);
  rpc FindOneRoute (FindOneRouteRequest) returns (RouteResponse);
  rpc UpdateRoute (UpdateRouteRequest) returns (RouteResponse);
  rpc DeleteRoute (DeleteRouteRequest) returns (EmptyResponse);
}

message CreateRouteRequest {
  string name = 1;
  string start_location = 2;
  string end_location = 3;
  float distance = 4;
}

message FindAllRoutesRequest {
  string query = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message FindOneRouteRequest {
  int32 id = 1;
}

message UpdateRouteRequest {
  int32 id = 1;
  string name = 2;
  string start_location = 3;
  string end_location = 4;
  float distance = 5;
}

message DeleteRouteRequest {
  int32 id = 1;
}

message RouteResponse {
  int32 id = 1;
  string name = 2;
  string start_location = 3;
  string end_location = 4;
  float distance = 5;
}

message RoutesResponse {
  repeated RouteResponse routes = 1;
}

message EmptyResponse {}
